--- a/content/publication/upm-68578/cite.bib
+++ b/content/publication/upm-68578/cite.bib
@@ -1,5 +1,5 @@
 @unpublished{upm68578,
- abstract = {Persistence diagrams of real-valued functions on topological spaces are one of the most important tools of Topological Data Analysis. In this undergraduate thesis, the Stability Theorem of Persistence Diagrams for the bottleneck distance is stated and proved following (Cohen-Steiner et al, 2007). This theorem guarantees the robustness of the persistence diagrams under mild assumptions, that is, that "small" changes in the functions result in "close" persistence diagrams. To do this, we will begin by introducing the basic topological notions to make this work self-contained. We will continue to state and prove the Stability Theorem. Finally, we will study various algorithms for calculating the Hausdorff and bottleneck distances to illustrate with several examples the stability of the persistence diagrams, focusing on filtrations of simplicial complexes associated with point clouds with some noise.},
+ abstract = {Persistence diagrams of real-valued functions on topological spaces are one of the most important tools of Topological Data Analysis. In this undergraduate thesis, the Stability Theorem of Persistence Diagrams for the bottleneck distance is stated and proved following Cohen-Steiner et al. (2007). This theorem guarantees the robustness of the persistence diagrams under mild assumptions, that is, that "small" changes in the functions result in "close" persistence diagrams. To do this, we will begin by introducing the basic topological notions to make this work self-contained. We will continue to state and prove the Stability Theorem. Finally, we will study various algorithms for calculating the Hausdorff and bottleneck distances to illustrate with several examples the stability of the persistence diagrams, focusing on filtrations of simplicial complexes associated with point clouds with some noise.},
  address = {Madrid, España},
  author = {García Castellanos, Alejandro},
  month = {Junio},
