--- a/publications.bib
+++ b/publications.bib
@@ -9,20 +9,16 @@
         abstract = {Persistence diagrams of real-valued functions on topological spaces are one of the most important tools of Topological Data Analysis. In this undergraduate thesis, the Stability Theorem of Persistence Diagrams for the bottleneck distance is stated and proved following (Cohen-Steiner et al, 2006). This theorem guarantees the robustness of the persistence diagrams under mild assumptions, that is, that "small" changes in the functions result in "close" persistence diagrams. To do this, we will begin by introducing the basic topological notions to make this work self-contained. We will continue to state and prove the Stability Theorem. Finally, we will study various algorithms for calculating the Hausdorff and bottleneck distances to illustrate with several examples the stability of the persistence diagrams, focusing on filtrations of simplicial complexes associated with point clouds with some noise.}
 }
 
-@mastersthesis{Garcia1642320,
-   author = {Garc{\'i}a Castellanos, Alejandro},
+@mastersthesis{GarciaCastellanos1820224,
+   author = {García Castellanos, Alejandro},
    institution = {KTH, School of Electrical Engineering and Computer Science (EECS)},
-   pages = {118},
+   pages = {98},
+   publisher = {KTH Royal Institute of Technology},
    school = {KTH, School of Electrical Engineering and Computer Science (EECS)},
    title = {Topological regularization and relative latent representations},
    series = {TRITA-EECS-EX},
-   number = {2023:00},
-   abstract = {This Master's Thesis delves into the application of topological regularization techniques and relative latent representations within the realm of zero-shot model stitching. Building upon the prior work of Moschella et al. (2022) that introduces relative latent representations to enhance the similarities between latent spaces of different models, we incorporate the approach of Hofer et al. (2021), which combines Topological Data Analysis (TDA) and Machine Learning techniques for topological densification of class distributions in the latent space.
-
-The main research objective is to investigate the impact of topological regularization on zero-shot stitching performance when employing relative latent representations. Theoretical foundations for the relative transformation are established based on the intertwiner groups of activation functions. Empirical analyses are conducted to validate the assumptions underlying the construction of the relative transformation in the latent space. Moreover, experiments are performed on a Large Language Model trained on multilingual Amazon Reviews datasets to evaluate the effectiveness of zero-shot stitching while using the topological densification technique and the relative transformation.
-
-The findings indicate that the proposed methodologies can enhance the performance of multilingual model stitching. Specifically, enforcing the relative transformation to preserve the H_{0} homology death times distributions proves beneficial. Additionally, the presence of similar topological features plays a crucial role in achieving higher model compatibility. However, a more in-depth exploration of the geometric properties of the post-relative transformation latent space is necessary to further improve the topological densification technique.
-
-Overall, this work contributes to the emerging field of Topological Machine Learning and provides valuable insights for researchers in transfer learning and representation learning domains.},
+   number = {2023:789},
+   keywords = {Algebraic Topology, Large Language Models, Relative Representation, Representation Learning, Model Stitching, Topological DataAnalysis, Zero-shot, Algebraisk topologi, Stora språkmodeller, Relativ representation, Representationsinlärning, Modell sömmar, Topologisk dataanalys, Zero-shot},
+   abstract = {This Master's Thesis delves into the application of topological regularization techniques and relative latent representations within the realm of zero-shot model stitching. Building upon the prior work of Moschella et al. (2022) that introduces relative latent representations to enhance the similarities between latent spaces of different models, we incorporate the approach of Hofer et al. (2021), which combines Topological Data Analysis (TDA) and Machine Learning techniques for topological densification of class distributions in the latent space. The main research objective is to investigate the impact of topological regularization on zero-shot stitching performance when employing relative latent representations. Theoretical foundations for the relative transformation are established based on the intertwiner groups of activation functions. Empirical analyses are conducted to validate the assumptions underlying the construction of the relative transformation in the latent space. Moreover, experiments are performed on a Large Language Model trained on multilingual Amazon Reviews datasets to evaluate the effectiveness of zero-shot stitching while using the topological densification technique and the relative transformation. The findings indicate that the proposed methodologies can enhance the performance of multilingual model stitching. Specifically, enforcing the relative transformation to preserve the H0 homology death times distributions proves beneficial. Additionally, the presence of similar topological features plays a crucial role in achieving higher model compatibility. However, a more in-depth exploration of the geometric properties of the post-relative transformation latent space is necessary to further improve the topological densification technique. Overall, this work contributes to the emerging field of Topological Machine Learning and provides valuable insights for researchers in transfer learning and representation learning domains. },
    year = {2023}
 }
