--- a/publications.bib
+++ b/publications.bib
@@ -5,12 +5,12 @@
          address = {Madrid, Espa{\~n}a},
            month = {Junio},
              url = {https://oa.upm.es/68578/},
-          author = {Garc{\'i}a Castellanos, Alejandro},
+          author = {Garc{\'\i}a-Castellanos, Alejandro},
         abstract = {Persistence diagrams of real-valued functions on topological spaces are one of the most important tools of Topological Data Analysis. In this undergraduate thesis, the Stability Theorem of Persistence Diagrams for the bottleneck distance is stated and proved following (Cohen-Steiner et al, 2006). This theorem guarantees the robustness of the persistence diagrams under mild assumptions, that is, that "small" changes in the functions result in "close" persistence diagrams. To do this, we will begin by introducing the basic topological notions to make this work self-contained. We will continue to state and prove the Stability Theorem. Finally, we will study various algorithms for calculating the Hausdorff and bottleneck distances to illustrate with several examples the stability of the persistence diagrams, focusing on filtrations of simplicial complexes associated with point clouds with some noise.}
 }
 
 @mastersthesis{GarciaCastellanos1820224,
-   author = {García Castellanos, Alejandro},
+   author = {Garc{\'\i}a-Castellanos, Alejandro},
    institution = {KTH, School of Electrical Engineering and Computer Science (EECS)},
    pages = {98},
    publisher = {KTH Royal Institute of Technology},
@@ -34,5 +34,12 @@
   title={HyperSteiner: Computing Heuristic Hyperbolic Steiner Minimal Trees},
   author={Garc{\'\i}a-Castellanos, Alejandro and Medbouhi, Aniss Aiman and Marchetti, Giovanni Luca and Bekkers, Erik J and Kragic, Danica},
   journal={arXiv preprint arXiv:2409.05671},
+  year={2024}
+}
+
+@inproceedings{van2024learning,
+  title={Learning symmetries via weight-sharing with doubly stochastic tensors},
+  author={Van der Linden, Putri A and Garc{\'\i}a-Castellanos, Alejandro and Vadgama, Sharvaree and Kuipers, Thijs P and Bekkers, Erik J},
+  booktitle={ICML 2024 Workshop on Geometry-grounded Representation Learning and Generative Modeling},
   year={2024}
 }
