--- a/publications.bib
+++ b/publications.bib
@@ -1,45 +1,52 @@
-@unpublished{upm68578,
-            note = {No Publicado},
-            year = {2021},
-           title = {Robustez de la homolog{\'i}a persistente: el Teorema de Estabilidad},
-         address = {Madrid, Espa{\~n}a},
-           month = {Junio},
-             url = {https://oa.upm.es/68578/},
-          author = {Garc{\'\i}a-Castellanos, Alejandro},
-        abstract = {Persistence diagrams of real-valued functions on topological spaces are one of the most important tools of Topological Data Analysis. In this undergraduate thesis, the Stability Theorem of Persistence Diagrams for the bottleneck distance is stated and proved following (Cohen-Steiner et al, 2006). This theorem guarantees the robustness of the persistence diagrams under mild assumptions, that is, that "small" changes in the functions result in "close" persistence diagrams. To do this, we will begin by introducing the basic topological notions to make this work self-contained. We will continue to state and prove the Stability Theorem. Finally, we will study various algorithms for calculating the Hausdorff and bottleneck distances to illustrate with several examples the stability of the persistence diagrams, focusing on filtrations of simplicial complexes associated with point clouds with some noise.}
+
+
+
+
+
+
+@inbook{doi:10.1137/1.9781611978339.16,
+author = {Alejandro García-Castellanos and Aniss Aiman Medbouhi and Giovanni Luca Marchetti and Erik J. Bekkers and Danica Kragic},
+title = {HyperSteiner: Computing Heuristic Hyperbolic Steiner Minimal Trees},
+booktitle = {2025 Proceedings of the Symposium on Algorithm Engineering and Experiments (ALENEX)},
+chapter = {},
+pages = {194-208},
+doi = {10.1137/1.9781611978339.16},
+URL = {https://epubs.siam.org/doi/abs/10.1137/1.9781611978339.16},
+eprint = {https://epubs.siam.org/doi/pdf/10.1137/1.9781611978339.16},
+    abstract = { We propose HyperSteiner – an efficient heuristic algorithm for computing Steiner minimal trees in the hyperbolic space. HyperSteiner extends the Euclidean Smith-Lee-Liebman algorithm, which is grounded in a divide-and-conquer approach involving the Delaunay triangulation. The central idea is rephrasing Steiner tree problems with three terminals as a system of equations in the Klein-Beltrami model. Motivated by the fact that hyperbolic geometry is well-suited for representing hierarchies, we explore applications to hierarchy discovery in data. Results show that HyperSteiner infers more realistic hierarchies than the Minimum Spanning Tree and is more scalable to large datasets than Neighbor Joining. }
 }
 
-@mastersthesis{GarciaCastellanos1820224,
-   author = {Garc{\'\i}a-Castellanos, Alejandro},
-   institution = {KTH, School of Electrical Engineering and Computer Science (EECS)},
-   pages = {98},
-   publisher = {KTH Royal Institute of Technology},
-   school = {KTH, School of Electrical Engineering and Computer Science (EECS)},
-   title = {Topological regularization and relative latent representations},
-   series = {TRITA-EECS-EX},
-   number = {2023:789},
-   keywords = {Algebraic Topology, Large Language Models, Relative Representation, Representation Learning, Model Stitching, Topological DataAnalysis, Zero-shot, Algebraisk topologi, Stora språkmodeller, Relativ representation, Representationsinlärning, Modell sömmar, Topologisk dataanalys, Zero-shot},
-   abstract = {This Master's Thesis delves into the application of topological regularization techniques and relative latent representations within the realm of zero-shot model stitching. Building upon the prior work of Moschella et al. (2022) that introduces relative latent representations to enhance the similarities between latent spaces of different models, we incorporate the approach of Hofer et al. (2021), which combines Topological Data Analysis (TDA) and Machine Learning techniques for topological densification of class distributions in the latent space. The main research objective is to investigate the impact of topological regularization on zero-shot stitching performance when employing relative latent representations. Theoretical foundations for the relative transformation are established based on the intertwiner groups of activation functions. Empirical analyses are conducted to validate the assumptions underlying the construction of the relative transformation in the latent space. Moreover, experiments are performed on a Large Language Model trained on multilingual Amazon Reviews datasets to evaluate the effectiveness of zero-shot stitching while using the topological densification technique and the relative transformation. The findings indicate that the proposed methodologies can enhance the performance of multilingual model stitching. Specifically, enforcing the relative transformation to preserve the H0 homology death times distributions proves beneficial. Additionally, the presence of similar topological features plays a crucial role in achieving higher model compatibility. However, a more in-depth exploration of the geometric properties of the post-relative transformation latent space is necessary to further improve the topological densification technique. Overall, this work contributes to the emerging field of Topological Machine Learning and provides valuable insights for researchers in transfer learning and representation learning domains. },
-   year = {2023}
+
+@inproceedings{DBLP:conf/nips/LindenGVKB24,
+  author       = {Putri A. van der Linden and
+                  Alejandro Garc{\'{\i}}a{-}Castellanos and
+                  Sharvaree P. Vadgama and
+                  Thijs P. Kuipers and
+                  Erik J. Bekkers},
+  editor       = {Amir Globersons and
+                  Lester Mackey and
+                  Danielle Belgrave and
+                  Angela Fan and
+                  Ulrich Paquet and
+                  Jakub M. Tomczak and
+                  Cheng Zhang},
+  title        = {Learning symmetries via weight-sharing with doubly stochastic tensors},
+  booktitle    = {Advances in Neural Information Processing Systems 38: Annual Conference
+                  on Neural Information Processing Systems 2024, NeurIPS 2024, Vancouver,
+                  BC, Canada, December 10 - 15, 2024},
+  year         = {2024},
+  url          = {http://papers.nips.cc/paper\_files/paper/2024/hash/4b34143d8a1e651f00002e31b3b72e95-Abstract-Conference.html},
+  timestamp    = {Thu, 13 Feb 2025 16:56:43 +0100},
+  biburl       = {https://dblp.org/rec/conf/nips/LindenGVKB24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{garcia2024relative,
-  title={Relative Representations: Topological and Geometric Perspectives},
-  author={Garc{\'\i}a-Castellanos, Alejandro and Marchetti, Giovanni Luca and Kragic, Danica and Scolamiero, Martina},
-  journal={arXiv preprint arXiv:2409.10967},
-  year={2024}
-}
-
-@article{garcia2024hypersteiner,
-  title={HyperSteiner: Computing Heuristic Hyperbolic Steiner Minimal Trees},
-  author={Garc{\'\i}a-Castellanos, Alejandro and Medbouhi, Aniss Aiman and Marchetti, Giovanni Luca and Bekkers, Erik J and Kragic, Danica},
-  journal={arXiv preprint arXiv:2409.05671},
-  year={2024}
-}
-
-@inproceedings{van2024learning,
-  title={Learning symmetries via weight-sharing with doubly stochastic tensors},
-  author={Van der Linden, Putri A and Garc{\'\i}a-Castellanos, Alejandro and Vadgama, Sharvaree and Kuipers, Thijs P and Bekkers, Erik J},
-  booktitle={ICML 2024 Workshop on Geometry-grounded Representation Learning and Generative Modeling},
-  year={2024}
+@misc{garcíacastellanos2025equivarianteikonalneuralnetworks,
+      title={Equivariant Eikonal Neural Networks: Grid-Free, Scalable Travel-Time Prediction on Homogeneous Spaces}, 
+      author={Alejandro García-Castellanos and David R. Wessels and Nicky J. van den Berg and Remco Duits and Daniël M. Pelt and Erik J. Bekkers},
+      year={2025},
+      eprint={2505.16035},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2505.16035}, 
 }
