--- a/content/publication/van-2024-learning/cite.bib
+++ b/content/publication/van-2024-learning/cite.bib
@@ -1,6 +1,23 @@
 @inproceedings{van2024learning,
- author = {Van der Linden, Putri A and Garcı́a-Castellanos, Alejandro and Vadgama, Sharvaree and Kuipers, Thijs P and Bekkers, Erik J},
- booktitle = {ICML 2024 Workshop on Geometry-grounded Representation Learning and Generative Modeling},
+ author = {Putri A. van der Linden and
+Alejandro García-Castellanos and
+Sharvaree P. Vadgama and
+Thijs P. Kuipers and
+Erik J. Bekkers},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/conf/nips/LindenGVKB24.bib},
+ booktitle = {Advances in Neural Information Processing Systems 38: Annual Conference
+on Neural Information Processing Systems 2024, NeurIPS 2024, Vancouver,
+BC, Canada, December 10 - 15, 2024},
+ editor = {Amir Globersons and
+Lester Mackey and
+Danielle Belgrave and
+Angela Fan and
+Ulrich Paquet and
+Jakub M. Tomczak and
+Cheng Zhang},
+ timestamp = {Thu, 13 Feb 2025 16:56:43 +0100},
  title = {Learning symmetries via weight-sharing with doubly stochastic tensors},
+ url = {http://papers.nips.cc/paper_files/paper/2024/hash/4b34143d8a1e651f00002e31b3b72e95-Abstract-Conference.html},
  year = {2024}
 }
