--- a/content/publication/garcia-2024-hypersteiner/cite.bib
+++ b/content/publication/garcia-2024-hypersteiner/cite.bib
@@ -1,6 +1,11 @@
-@article{garcia2024hypersteiner,
- author = {Garcı́a-Castellanos, Alejandro and Medbouhi, Aniss Aiman and Marchetti, Giovanni Luca and Bekkers, Erik J and Kragic, Danica},
- journal = {arXiv preprint arXiv:2409.05671},
+@inbook{doi:10.1137/1.9781611978339.16,
+ abstract = { We propose HyperSteiner - an efficient heuristic algorithm for computing Steiner minimal trees in the hyperbolic space. HyperSteiner extends the Euclidean Smith-Lee-Liebman algorithm, which is grounded in a divide-and-conquer approach involving the Delaunay triangulation. The central idea is rephrasing Steiner tree problems with three terminals as a system of equations in the Klein-Beltrami model. Motivated by the fact that hyperbolic geometry is well-suited for representing hierarchies, we explore applications to hierarchy discovery in data. Results show that HyperSteiner infers more realistic hierarchies than the Minimum Spanning Tree and is more scalable to large datasets than Neighbor Joining. },
+ author = {Alejandro García-Castellanos and Aniss Aiman Medbouhi and Giovanni Luca Marchetti and Erik J. Bekkers and Danica Kragic},
+ booktitle = {2025 Proceedings of the Symposium on Algorithm Engineering and Experiments (ALENEX)},
+ chapter = {},
+ doi = {10.1137/1.9781611978339.16},
+ eprint = {https://epubs.siam.org/doi/pdf/10.1137/1.9781611978339.16},
+ pages = {194-208},
  title = {HyperSteiner: Computing Heuristic Hyperbolic Steiner Minimal Trees},
- year = {2024}
+ url = {https://epubs.siam.org/doi/abs/10.1137/1.9781611978339.16}
 }
